--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
